samples/_failures_safe/1761218865_f6b09e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fab41978.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_fab41978.c:165:5: error: expected identifier at end of input
  165 |     token->
      |     ^~~~~
./samples/SAFE/__tmp_fab41978.c:165:5: error: expected declaration or statement at end of input
